...
                .pickerStyle(.menu)
                .labelsHidden()
                .frame(width: 100)

                Spacer()

                Button("or choose files...") {
                    chooseFiles()
                }
                .buttonStyle(.link)
            }
            .frame(maxWidth: 420)

...
